fix: amount field currency after alignment

--- a/assets/css/give-admin-rtl.css
+++ b/assets/css/give-admin-rtl.css
@@ -806,7 +806,7 @@ div.cmb-type-levels-repeater-header + div.cmb-repeat-group-wrap {
   margin-left: -4px; }
 
 .give-money-symbol-after {
-  margin-right: -1px; }
+  margin-right: -5px; }
 
 .give_options_panel input[type="text"] {
   padding: 5px;
