--- a/assets/css/give-admin.css
+++ b/assets/css/give-admin.css
@@ -806,7 +806,7 @@ div.cmb-type-levels-repeater-header + div.cmb-repeat-group-wrap {
   margin-right: -4px; }
 
 .give-money-symbol-after {
-  margin-left: -1px; }
+  margin-left: -5px; }
 
 .give_options_panel input[type="text"] {
   padding: 5px;
