--- a/assets/scss/admin/forms.scss
+++ b/assets/scss/admin/forms.scss
@@ -139,7 +139,7 @@ div.cmb-type-levels-repeater-header + div.cmb-repeat-group-wrap {
 
 .give-money-symbol-after {
 	//border-left: 0;
-	margin-left: -1px;
+	margin-left: -5px;
 }
 
 .give_options_panel input[ type="text"] {
